--- a/ppamobile.html
+++ b/ppamobile.html
@@ -15,9 +15,19 @@
 
 <div data-role="page">
 	<div data-role="header">
+		<!-- <a href="index.html" data-icon="">Edit</a> -->
+		<div data-role="fieldcontain" class="ui-btn-left" data-inline="true">
+			<select name="flip-mini" id="flip-mini" data-role="slider" data-mini="true" class="ui-btn-left" data-inline="true">
+				<option value=" Edit off">Off</option>
+				<option value="Edit on">On</option>
+			</select>
+		</div>
 		<h1>ppa</h1>
+		<input type="submit" value="Calculate" class="ui-btn-right" data-mini="true" data-inline="true"/>
 	</div><!-- /header -->
-	<div id="map"></div>
+	<div data-role="content" id="map"></div>
+	<div data-role="footer">
+	</div>
 </div><!-- /page -->
 
 </body>
