Removed the flip toogle and added an anchor that resets the page

--- a/ppamobile.html
+++ b/ppamobile.html
@@ -15,13 +15,7 @@
 
 <div data-role="page">
 	<div data-role="header">
-		<!-- <a href="index.html" data-icon="">Edit</a> -->
-		<div data-role="fieldcontain" class="ui-btn-left" data-inline="true">
-			<select name="flip-mini" id="flip-mini" data-role="slider" data-mini="true" class="ui-btn-left" data-inline="true">
-				<option value=" Edit off">Off</option>
-				<option value="Edit on">On</option>
-			</select>
-		</div>
+		<a href="ppamobile.html" data-icon="">Clear</a>
 		<h1>ppa</h1>
 		<input type="submit" value="Calculate" class="ui-btn-right" data-mini="true" data-inline="true"/>
 	</div><!-- /header -->
