Added the beginnings of of the ajax call wired to the submit button submit event...added an id to the submit button html

--- a/ppamobile.html
+++ b/ppamobile.html
@@ -17,7 +17,7 @@
 	<div data-role="header">
 		<a href="ppamobile.html" data-icon="">Clear</a>
 		<h1>ppa</h1>
-		<input type="submit" value="Calculate" class="ui-btn-right" data-mini="true" data-inline="true"/>
+		<input id="calculateButton" type="submit" value="Calculate" class="ui-btn-right" data-mini="true" data-inline="true"/>
 	</div><!-- /header -->
 	<div data-role="content" id="map"></div>
 	<div data-role="footer">
