Changed the name of the app heading and gave it a bold style

--- a/ppamobile.html
+++ b/ppamobile.html
@@ -16,7 +16,7 @@
 <div data-role="page">
 	<div data-role="header">
 		<a href="ppamobile.html" data-icon="">Clear</a>
-		<h1>ppa</h1>
+		<h1 id="heading">Weedon Island Potsherd Monitoring Tool</h1>
 		<input id="calculateButton" type="submit" value="Calculate" class="ui-btn-right" data-mini="true" data-inline="true"/>
 	</div><!-- /header -->
 	<div data-role="content" id="map"></div>
