Disabled the double touch zoom becasue of the interaction with the point placement...added the reload page to the onClick event of the Clear button

--- a/ppamobile.html
+++ b/ppamobile.html
@@ -15,7 +15,7 @@
 
 <div data-role="page">
 	<div data-role="header">
-		<a href="ppamobile.html" data-icon="">Clear</a>
+		<a href="ppamobile.html" data-icon="" onClick="window.location.reload()">Clear</a>
 		<h1 id="heading">Weedon Island Potsherd Monitoring Tool</h1>
 		<input id="calculateButton" type="submit" value="Calculate" class="ui-btn-right" data-mini="true" data-inline="true"/>
 	</div><!-- /header -->
