Added the AgsDynamicLayer class and added the dynamic layer to the application

--- a/ppamobile.html
+++ b/ppamobile.html
@@ -10,6 +10,7 @@
 		<script src="js/jquery-1.7.2.min.js"></script>
 		<script src="js/jquery.mobile-1.1.1.js"></script>
 		<script src="js/leaflet/dist/leaflet.js"></script>
+		<script src="js/AgsDynamicLayer.js"></script>
 		<script src="js/ppa.js"></script>
 	</head> 
 	<body onload="initMap();"> 
